feat: basic new version UI

--- a/components/PageGame/GameHomeTab.tsx/styles.module.scss
+++ b/components/PageGame/GameHomeTab.tsx/styles.module.scss
@@ -29,6 +29,9 @@
     line-height: 2rem;
     margin-bottom: 2.5rem;
   }
+  & > div {
+    box-shadow: 0rem 0.5rem 2.5rem 0rem #f2f0f4;
+  }
 }
 
 .carnivalRewrads {
