--- a/styles/games.module.scss
+++ b/styles/games.module.scss
@@ -117,6 +117,8 @@
 
 @media screen and (max-width: 600px) {
   .games {
+    // max-height: calc(100vh - 4.67rem);
+    // overflow: scroll;
     padding-bottom: 5rem;
     .gamesBox {
       width: calc(100% - 2.66rem);
@@ -134,7 +136,7 @@
         width: 100%;
         margin-left: 0;
         height: auto;
-        max-height: none;
+     
         & > div {
           width: 100%;
           margin: 0;
