--- a/styles/activities.module.scss
+++ b/styles/activities.module.scss
@@ -94,10 +94,20 @@
   }
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 800px) {
   .bounties {
     .bountiesBox {
+      width: calc(100% - 2rem);
       .bountiesList {
+        width: 100%;
+        margin-left: 0;
+        height: auto;
+        max-height: none;
+        & > a {
+          width: 100%;
+          margin: 0;
+          margin-bottom: 1rem;
+        }
       }
     }
   }
@@ -107,7 +117,7 @@
   .bounties {
     padding-bottom: 5rem;
     .bountiesBox {
-      width: calc(100% - 2.66rem);
+      width: calc(100% - 2rem);
 
       h2 {
         font-size: 1.75rem;
@@ -121,6 +131,7 @@
       .bountiesList {
         width: 100%;
         margin-left: 0;
+        margin-top: 0;
         height: auto;
         max-height: none;
         & > a {
