fix: card padding

--- a/components/HotGameCard/styles.module.scss
+++ b/components/HotGameCard/styles.module.scss
@@ -129,7 +129,9 @@
           color: #222222;
           line-height: 1.33rem;
           margin-top: 0.25rem;
-          margin-bottom: 0.83rem;
+          // margin-bottom: 0.83rem;
+          margin-bottom: 0;
+          padding-bottom: 0.83rem;
         }
         p {
           margin-top: 0.83rem;
