--- a/components/WalkthroughCollection/styles.module.scss
+++ b/components/WalkthroughCollection/styles.module.scss
@@ -100,6 +100,7 @@
     position: relative;
     background: #ffffff;
     border-radius: 1rem;
+    padding-bottom: 1.33rem;
 
     &::before {
       content: '';
