--- a/components/PageHome/WeeklyRank/styles.module.scss
+++ b/components/PageHome/WeeklyRank/styles.module.scss
@@ -5,68 +5,70 @@
     margin: auto;
     padding-bottom: 1.75rem;
 
-    .sliderBox {
+    .carouselBox {
       margin-top: 3.33rem;
+      height: 32.29rem;
+      width: 100%;
+      cursor: pointer;
+      position: relative;
 
       .sliderItem {
-        height: 29.13rem;
-        width: 45rem !important;
-        border-radius: 1.33rem;
-        overflow: hidden;
-        position: relative;
-
-        &::before {
-          position: absolute;
-          content: '';
-          top: 0rem;
-          left: 0;
-          right: 0;
-          bottom: 0rem;
-          background-color: rgba(#222, 0.5);
-          border-radius: 1.33rem;
-          overflow: hidden;
-        }
+        position: absolute;
+        transition: all 0.3s ease;
+        user-select: none;
         img {
           width: 100%;
           height: 100%;
           border-radius: 1.33rem;
           overflow: hidden;
         }
-      }
-
-      :global {
-        .slick-list {
-          height: 32.33rem;
+        .mask {
+          position: absolute;
+          top: 0;
+          left: 0;
+          width: 100%;
+          height: 100%;
+          background: rgba(0, 0, 0, .3);
+          transition: all 0.2s ease;
+          border-radius: 1.33rem;
           overflow: hidden;
         }
-        .slick-track {
-          display: flex;
-          height: 32.33rem;
-          align-items: center;
+      }
+      .active {
+        width: 51.67rem;
+        height: 100%;
+        top: 0;
+        bottom: 0;
+        z-index: 30;
+        left: calc((100% - 51.67rem) / 2);
+        transition: all 0.3s ease;
+        .mask {
+          background-color: transparent;
         }
-        .slick-slide {
-          position: relative;
-          height: 32.33rem;
-          width: 45rem;
-          border-radius: 1.33rem;
-          display: flex;
-          align-items: center;
-        }
+      }
 
-        .slick-current {
-          height: 29.13rem;
-          & > div > div {
-            position: relative;
-            z-index: 1000;
-            margin-left: -3.33rem;
-            // width: 0;
-            width: 51.67rem !important;
-            height: 32.33rem !important;
-            &::before {
-              background-color: transparent !important;
-            }
-          }
-        }
+      .prev {
+        width: 36%;
+        height: 28.13rem;
+        left: 0;
+        top: 2.08rem;
+        z-index: 20;
+      }
+
+      .next {
+        width: 36%;
+        height: 28.13rem;
+        left: 63.8%;
+        top: 2.08rem;
+        z-index: 20;
+      }
+
+      .hidden {
+        width: 27.8%;
+        height: 28.13rem;
+        top: 2.08rem;
+        left: 45rem;
+        z-index: 10;
       }
     }
   }
