chore: update banner height

--- a/components/PageHome/TopBanner/styles.module.scss
+++ b/components/PageHome/TopBanner/styles.module.scss
@@ -65,7 +65,8 @@
       box-sizing: border-box;
       width: calc(78.1vw + 2rem) !important;
       // height: 37.5rem;
-      height: 23.4vw;
+      // height: 23.4vw;
+      height: 20.8vw;
       // margin: 0 1rem;
       position: relative;
 
