chore: reduce section margin in home page

--- a/components/PageHome/HotGames/style.module.scss
+++ b/components/PageHome/HotGames/style.module.scss
@@ -3,8 +3,9 @@
     height: 100%;
     width: 78.2%;
     margin: auto;
-    padding-top: 5rem;
-    padding-bottom: 3.67rem;
+    padding-top: 50px;
+    // padding-bottom: 3.67rem;
+    padding-bottom: 34px;
 
     .cardList {
       width: calc(100% + 1.33rem);
