--- a/components/PageHome/Support/style.module.scss
+++ b/components/PageHome/Support/style.module.scss
@@ -3,8 +3,8 @@
   .supportBox {
     width: 78.2%;
     margin: auto;
-    padding-top: 5rem;
-    padding-bottom: 5rem;
+    padding-top: 50px;
+    padding-bottom: 50px;
 
     .cardList {
       display: flex;
