--- a/components/PageHome/GameStrategy/style.module.scss
+++ b/components/PageHome/GameStrategy/style.module.scss
@@ -4,8 +4,9 @@
   .gameStrategyBox {
     width: 78.2%;
     margin: auto;
-    padding-top: 5rem;
-    padding-bottom: 4rem;
+    // padding-top: 5rem;
+    padding-top: 35px;
+    padding-bottom: 3rem;
 
     .cardList {
       display: flex;
@@ -87,7 +88,7 @@
     .gameStrategyBox {
       width: calc(100% - 2rem);
       padding-top: 2.5rem;
-      padding-bottom:0rem;
+      padding-bottom: 0rem;
 
       .cardList {
         margin-top: 1rem;
