--- a/components/PageHome/Partners/styles.module.scss
+++ b/components/PageHome/Partners/styles.module.scss
@@ -1,6 +1,6 @@
 .partner {
   background-color: white;
-  padding: 5rem 0;
+  padding: 50px 0;
   .partnerBox {
     width: 78.2%;
     margin: auto;
