--- a/components/PageHome/RewardGames/styles.module.scss
+++ b/components/PageHome/RewardGames/styles.module.scss
@@ -6,8 +6,8 @@
     height: 100%;
     width: 78.2%;
     margin: auto;
-    padding-top: 5rem;
-    padding-bottom: 3rem;
+    padding-top: 50px;
+    padding-bottom: 26px;
 
     .cardList {
       width: calc(100% + 2rem);
