chore: update image styles

--- a/components/ActivityCard/styles.module.scss
+++ b/components/ActivityCard/styles.module.scss
@@ -9,7 +9,8 @@
   .imageBox {
     position: relative;
     height: 12.83rem;
-    width: 40%;
+    width: 42.5%;
+    // width: 25rem;
     max-width: 25rem;
     background: #ffffff;
     border-radius: 1rem;
