--- a/components/PageHome/WeeklyRank/styles.module.scss
+++ b/components/PageHome/WeeklyRank/styles.module.scss
@@ -21,6 +21,7 @@
           height: 100%;
           border-radius: 1.33rem;
           overflow: hidden;
+          object-fit: cover;
         }
         .mask {
           position: absolute;
