--- a/components/PageGame/GameHomeTab.tsx/styles.module.scss
+++ b/components/PageGame/GameHomeTab.tsx/styles.module.scss
@@ -102,7 +102,7 @@
 
 @media screen and (max-width: 1250px) {
   .carnivalRewrads {
-    width: calc(100% - 10rem);
+    // width: calc(100% - 10rem);
     margin: auto;
 
     .rewardDesc {
@@ -113,7 +113,7 @@
 
 @media screen and (max-width: 1050px) {
   .carnivalRewrads {
-    width: calc(100% - 6rem);
+    // width: calc(100% - 6rem);
     margin: auto;
 
     .rewardDesc {
@@ -130,7 +130,7 @@
 
 @media screen and (max-width: 750px) {
   .carnivalRewrads {
-    width: calc(100% - 4rem);
+    // width: calc(100% - 4rem);
     margin: auto;
 
     .rewardDesc {
