fix: show react markdown in mobile

--- a/components/GameTaskDrawer/styles.module.scss
+++ b/components/GameTaskDrawer/styles.module.scss
@@ -95,6 +95,9 @@
       line-height: 2rem;
       margin: 0rem 0rem 1.67rem;
 
+      img {
+        max-width: 100%;
+      }
       a {
         text-decoration: underline;
       }
