feat: support image detail preview in task

--- a/components/PageCarnival/RewardItem/styles.module.scss
+++ b/components/PageCarnival/RewardItem/styles.module.scss
@@ -182,6 +182,7 @@
             img {
               max-height: 300px;
               margin: 0.5rem 0;
+              cursor: pointer;
             }
             p {
               font-size: 1.33rem;
