--- a/components/GameTaskDrawer/styles.module.scss
+++ b/components/GameTaskDrawer/styles.module.scss
@@ -87,6 +87,14 @@
       }
     }
 
+    h4 {
+      font-size: 1.33rem;
+      font-family: Inter-Medium, Inter;
+      font-weight: 500;
+      color: #222222;
+      line-height: 2rem; 
+      margin-bottom: 1rem;
+    }
     .stepDesc {
       font-size: 1.17rem;
       font-family: Inter-Medium, Inter;
@@ -95,6 +103,9 @@
       line-height: 2rem;
       margin: 0rem 0rem 1.67rem;
 
+      ol, ul {
+        padding-inline-start: 1.2rem;
+      }
       img {
         max-width: 100%;
       }
@@ -105,7 +116,7 @@
 
     .btnList {
       display: flex;
-      margin: auto -0.5rem 1.67rem;
+      margin: auto -0.5rem 1rem;
       flex-wrap: wrap;
     }
 
