--- a/components/PageHome/RewardGames/styles.module.scss
+++ b/components/PageHome/RewardGames/styles.module.scss
@@ -34,20 +34,26 @@
     align-items: center;
     justify-content: center;
 
-    font-size: 1.33rem;
-    font-family: Inter-Medium, Inter;
-    font-weight: 500;
+    font-size: 1.17rem;
+    font-family: Inter-SemiBold, Inter;
+    font-weight: 600;
     color: #222222;
-    line-height: 1.33rem;
+    line-height: 1.17rem;
 
-    border-radius: 0.67rem;
-    border: 0.08rem solid rgba(#222, 0.5);
-    height: 3.33rem;
+    height: 3rem;
+    border-radius: 1.5rem;
+    border: 1px solid #222222;
+    width: 16.67rem;
+
     margin: auto;
     margin-top: 1.33rem;
-    width: calc(100% - 2.66rem);
     cursor: pointer;
     user-select: none;
+
+    a {
+      display: inline-flex;
+      align-items: center;
+    }
   }
 }
 
