--- a/components/ConnectWallet/style.module.scss
+++ b/components/ConnectWallet/style.module.scss
@@ -1,11 +1,17 @@
 .walletItem {
-  display: flex;
+  width: 10rem;
+  height: 10rem;
+  display: inline-flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
 
-  // background: #ffffff;
+  background: #ffffff;
+  box-shadow: 0rem 0.08rem 0.33rem 0rem rgba(0, 0, 0, 0.2);
   border-radius: 1rem;
-  padding: 0.67rem 0.83rem;
+
+  // padding: 0.67rem 0.83rem;
+  padding-top: 1.5rem;
   cursor: pointer;
   position: relative;
   z-index: 1;
@@ -18,27 +24,35 @@
   }
   p {
     flex-grow: 1;
-    text-align: left;
+    // text-align: left;
+    text-align: center;
     margin: 0;
-    margin-left: 0.83rem;
+    margin-top: 0.83rem;
 
-    font-size: 1.5rem;
+    font-size: 1.33rem;
     font-family: Inter-SemiBold, Inter;
     font-weight: 600;
     color: #222222;
-    line-height: 1.5rem;
+    line-height: 1.33rem;
+  }
+  span {
+    width: 4rem !important;
+    height: 4rem !important;
   }
 
   .lastConnectType {
-    width: 4.67rem;
-    height: 1.5rem;
+    position: absolute;
+    right: 0.33rem;
+    top: 0.42rem;
+    width: 3.83rem;
+    height: 1.33rem;
     background: #222222;
-    border-radius: 0.75rem;
-    font-size: 1rem;
+    border-radius: 0.67rem;
+    font-size: 10px;
     font-family: PingFangSC-Semibold, PingFang SC;
     font-weight: 600;
     color: #ffffff;
-    line-height: 1.5rem;
+    line-height: 1.33rem;
     text-align: center;
   }
 
@@ -49,7 +63,8 @@
 }
 
 .walletItem + .walletItem {
-  margin-top: 0.67rem;
+  // margin-top: 0.67rem;
+  margin-left: 1.67rem;
 }
 
 .walletItem {
@@ -85,16 +100,18 @@
     @extend .logoBase;
     border-radius: 50%;
     background: #ffe9d3;
-
+    display: inline-flex;
+    // align-items: center;
+    justify-content: center;
     img {
-      transform: scale(0.65);
+      transform: scale(0.8);
     }
   }
   .itemUnipassLogo {
     @extend .logoBase;
     border-radius: 50%;
     border: 0.08rem solid #e6e6e6;
-    align-items: center;
+    display: inline-flex;
     justify-content: center;
     img {
       transform: scale(1.3);
@@ -131,56 +148,78 @@
     background-color: white;
 
     .walletList {
-      width: 27.5rem;
-      height: 45.83rem;
-      padding: 5.08rem 2.5rem 2.5rem;
-      background: #f4f4f9;
+      width: 41.67rem;
+      // width: 27.5rem;
+      height: 45.67rem;
+      padding: 5rem 49px;
       border-radius: 1.33rem 0rem 0rem 1.33rem;
 
+      :global {
+        .MuiAlert-root {
+          margin: 0;
+          padding: 0;
+        }
+      }
+
       h4 {
-        font-size: 2rem;
+        font-size: 2.5rem;
         font-family: Inter-SemiBold, Inter;
         font-weight: 600;
         color: #222222;
-        line-height: 2rem;
-        margin-bottom: 2.67rem;
+        line-height: 2.17rem;
+        padding-bottom: 0.83rem;
+      }
+
+      .walletSubtitle {
+        font-size: 1.33rem;
+        font-family: Inter-SemiBold, Inter;
+        font-weight: 600;
+        color: rgba(#222, 0.3);
+        line-height: 1.33rem;
+        margin-top: 3.33rem;
+        margin-bottom: 1.67rem;
       }
     }
   }
 }
 
 .walletIntro {
-  padding: 5.08rem 5rem 5rem;
+  // padding: 5.08rem 5rem 5rem;
+  padding:  11.33rem 4.17rem 5.12rem ;
   width: 49.17rem;
+  width: 34.17rem;
+
+  background: #f4f4f9;
 
   h4 {
-    font-size: 2rem;
+    font-size: 1.33rem;
     font-family: Inter-SemiBold, Inter;
     font-weight: 600;
     color: #222222;
-    line-height: 1.75rem;
+    line-height: 1.33rem;
   }
   .subtitle {
     width: 105%;
-    font-size: 16px;
-    font-family: Inter-Medium, Inter;
-    font-weight: 500;
+    font-size: 1.17rem;
+    font-family: Inter-Regular, Inter;
+    font-weight: 400;
     color: #222222;
-    line-height: 2rem;
-    margin-top: 1rem;
-    padding-bottom: 2.5rem;
+    line-height: 1.67rem;
+    margin-top: 0.83rem;
+    padding-bottom: 1.75rem;
   }
 
   .downItem {
     border-radius: 1rem;
-    border: 1px solid rgba(34, 34, 34, 0.2);
+    background-color: white;
+    // border: 1px solid rgba(34, 34, 34, 0.2);
     height: 5.33rem;
     display: flex;
     align-items: center;
     justify-content: space-between;
     padding: 0 1.17rem;
 
-    margin-top: 3.33rem;
+    margin-top: 2.5rem;
     position: relative;
     cursor: pointer;
 
@@ -199,11 +238,11 @@
       flex-grow: 1;
       text-align: left;
       margin-left: 0.83rem;
-      font-size: 1.5rem;
+      font-size: 1.33rem;
       font-family: Inter-SemiBold, Inter;
       font-weight: 600;
       color: #222222;
-      line-height: 1.5rem;
+      line-height: 1.33rem;
       user-select: none;
     }
     .getBtn {
@@ -252,22 +291,24 @@
   }
 
   .metamaskGuide {
-    font-size: 1.33rem;
+    font-size: 1.17rem;
     font-family: Inter-Regular, Inter;
     font-weight: 400;
-    color: #222222;
-    line-height: 1.33rem;
+    color: rgba(#222, 0.5);
+    line-height: 1.17rem;
     display: block;
     margin-top: 1rem;
     text-decoration: underline;
     cursor: pointer;
   }
   .unipassGuide {
-    font-size: 1.33rem;
+    width: 105%;
+
+    font-size: 1.17rem;
     font-family: Inter-Regular, Inter;
     font-weight: 400;
-    color: #222222;
-    line-height: 1.33rem;
+    color: rgba(#222, 0.5);
+    line-height: 1.17rem;
     margin-top: 1rem;
   }
 }
