--- a/components/ConnectWallet/style.module.scss
+++ b/components/ConnectWallet/style.module.scss
@@ -10,7 +10,10 @@
   box-shadow: 0rem 0.08rem 0.33rem 0rem rgba(0, 0, 0, 0.2);
   border-radius: 1rem;
 
-  // padding: 0.67rem 0.83rem;
+  &:hover {
+    box-shadow: 0px 3px 8px 2px rgba(0, 0, 0, 0.15);
+  }
+
   padding-top: 1.5rem;
   cursor: pointer;
   position: relative;
@@ -124,7 +127,7 @@
   // height: 45.83rem;
   margin: auto;
   // background-color: white;
-  // border-radius: 1.33rem;
+  border-radius: 1.33rem;
   // position: relative;
   // padding: 5.08rem 2.5rem 2.5rem;
 
@@ -184,7 +187,7 @@
 }
 
 .walletIntro {
-  // padding: 5.08rem 5rem 5rem;
+  border-radius: 1.33rem 0rem 0rem 1.33rem;
   padding: 11.33rem 4.17rem 5.12rem;
   width: 49.17rem;
   width: 34.17rem;
