--- a/styles/profile.module.scss
+++ b/styles/profile.module.scss
@@ -4,105 +4,7 @@
 
   .profileHeaderBox {
     // height: 23.33rem;
-    background-color: white;
-
-    .profileCover {
-      height: 20rem;
-      position: relative;
-
-      .icon1 {
-        position: absolute;
-        left: 75% !important;
-        top: 20% !important;
-
-        @keyframes icon1Ani {
-          0% {
-            transform: translateY(0);
-          }
-          50% {
-            transform: translateY(2px);
-          }
-          100% {
-            transform: translateY(0px);
-          }
-        }
-        animation-name: icon1Ani;
-        animation-duration: 2s;
-        animation-iteration-count: infinite;
-        animation-timing-function: linear;
-      }
-      .icon2 {
-        position: absolute;
-        left: 55% !important;
-        top: 50% !important;
-        @keyframes icon2Ani {
-          0% {
-            transform: translateY(0);
-          }
-          50% {
-            transform: translateY(2px);
-          }
-          100% {
-            transform: translateY(0px);
-          }
-        }
-        animation-name: icon2Ani;
-        animation-duration: 2s;
-        animation-iteration-count: infinite;
-        animation-timing-function: linear;
-      }
-      .icon3 {
-        position: absolute;
-        left: 70% !important;
-        top: 60% !important;
-
-        @keyframes icon3Ani {
-          0% {
-            transform: scale(1);
-          }
-          50% {
-            transform: scale(1.1);
-          }
-          100% {
-            transform: scale(1);
-          }
-        }
-        animation-name: icon3Ani;
-        animation-duration: 2s;
-        animation-iteration-count: infinite;
-        animation-timing-function: linear;
-      }
-      .icon4 {
-        position: absolute;
-        left: 6% !important;
-        top: 55% !important;
-        @keyframes icon4Ani {
-          0% {
-            transform: scale(1);
-          }
-          50% {
-            transform: scale(1.15);
-          }
-          100% {
-            transform: scale(1);
-          }
-        }
-        animation-name: icon4Ani;
-        animation-duration: 2s;
-        animation-iteration-count: infinite;
-        animation-timing-function: linear;
-      }
-      .icon5 {
-        position: absolute;
-        left: 25% !important;
-        top: 15% !important;
-      }
-      .icon6 {
-        position: absolute;
-        left: 62% !important;
-        top: 24% !important;
-      }
-    }
+    // background-color: white;
 
     .profileHeader {
       max-width: 100rem;
@@ -115,21 +17,24 @@
 
       .profileAvatar {
         position: relative;
-        width: 8.66rem;
-        height: 8.66rem;
-        border: 4px solid white;
+        width: 6.67rem;
+        height: 6.67rem;
+        border: 0.33rem solid #ffffff;
         border-radius: 50%;
-        margin-top: -4.33rem;
+        box-shadow: 0rem 0.67rem 0.83rem 0rem rgba(0, 0, 0, 0.08);
+        box-sizing: content-box;
         img {
           border-radius: 50%;
         }
       }
       .headerInfo {
+        padding-top: 5rem;
         flex-grow: 1;
-
         display: flex;
         flex-direction: column;
-        padding-bottom: 2.67rem;
+        justify-content: center;
+        align-items: center;
+        padding-bottom: 3.33rem;
 
         .mobileInfo {
           padding: 1.67rem 0 1.33rem;
@@ -164,41 +69,38 @@
                   height: 1rem;
                 }
               }
-              .passNFTInfo {
-                font-size: 1.17rem;
-                font-family: Inter-Medium, Inter;
-                font-weight: 500;
-                color: rgba(#222, 0.5);
-                line-height: 1.17rem;
-                // margin-top: 0.83rem;
-                margin-top: 0.4rem;
-                .iconBox {
-                  width: 1.17rem;
-                  height: 1.17rem;
-                  position: relative;
-                  margin-left: 0.33rem;
-                }
-              }
+              // .passNFTInfo {
+              //   font-size: 1.17rem;
+              //   font-family: Inter-Medium, Inter;
+              //   font-weight: 500;
+              //   color: rgba(#222, 0.5);
+              //   line-height: 1.17rem;
+              //   // margin-top: 0.83rem;
+              //   margin-top: 0.4rem;
+              //   .iconBox {
+              //     width: 1.17rem;
+              //     height: 1.17rem;
+              //     position: relative;
+              //     margin-left: 0.33rem;
+              //   }
+              // }
             }
           }
 
           .unipassLink {
-            margin-top: 1.33rem;
-            font-size: 1.17rem;
+            margin-top: 0.83rem;
+            font-size: 1rem;
             font-family: Inter-Regular, Inter;
             font-weight: 400;
             color: #222222;
-            line-height: 1.67rem;
-            padding: 0.5rem 0.83rem;
-            border-radius: 0.67rem;
-            .arrowIcon {
-              flex-shrink: 0;
-            }
+            line-height: 1.5rem;
           }
         }
 
         .addressItem {
-          margin-top: 1.33rem;
+          height: 2.17rem;
+
+          margin-top: 1.67rem;
           font-size: 2.5rem;
           font-family: Inter-SemiBold, Inter;
           font-weight: 600;
@@ -234,36 +136,17 @@
         }
 
         .unipassLink {
-          margin-top: 1.75rem;
-          // cursor: pointer;
+          margin-top: 0.83rem;
+
           font-size: 1.33rem;
-          font-family: Inter-Medium, Inter;
-          font-weight: 500;
+          font-family: Inter-Regular, Inter;
+          font-weight: 400;
           color: #222222;
           line-height: 1.33rem;
-
-          background: rgba(#8e50e4, 0.08);
-          border-radius: 0.5rem;
-          padding: 1.33rem 1.25rem;
 
           a {
             display: inline-flex;
             align-items: center;
-          }
-
-          .arrowIcon {
-            width: 1.67rem;
-            height: 1.67rem;
-            margin-left: 0.83rem;
-            border-radius: 50%;
-            color: #8e50e4;
-            background: rgba(#8e50e4, 0.2);
-            display: inline-flex;
-            align-items: center;
-            justify-content: center;
-            svg {
-              transform: scale(0.8);
-            }
           }
         }
 
@@ -309,6 +192,39 @@
     min-height: 50rem;
     margin: auto;
     overflow: hidden;
+
+    .pointreward {
+      height: 16.67rem;
+      border-radius: 1rem;
+      background: #2222220b;
+      background-image: url(https://firstplay-crm.s3.ap-east-1.amazonaws.com/_6e9910daaf.png?updated_at=2023-05-16T07:49:49.185Z);
+      background-repeat: no-repeat;
+      background-size: cover;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      cursor: pointer;
+
+      h3 {
+        height: 3rem;
+        font-size: 3rem;
+        font-family: Inter-Black, Inter;
+        font-weight: 900;
+        color: #ffbb2a;
+        line-height: 3rem;
+        margin-top: 4.25rem;
+        margin-bottom: 1.42rem;
+      }
+      p {
+        font-size: 1.75rem;
+        font-family: Inter-SemiBold, Inter;
+        font-weight: 600;
+        color: #ffbb2a;
+        max-width: 70%;
+        text-align: center;
+        line-height: 2.5rem;
+      }
+    }
 
     .balanceSection {
       background-color: white;
@@ -681,6 +597,15 @@
 
 @media screen and (max-width: 600px) {
   .containerBox {
+    .profileHeaderBox {
+      background-color: white;
+      .profileHeader {
+        .headerInfo {
+          align-items: flex-start;
+          padding-top: 0;
+        }
+      }
+    }
     .profileContent {
       .tabsHeader {
         background-color: white;
