--- a/styles/profile.module.scss
+++ b/styles/profile.module.scss
@@ -677,6 +677,59 @@
           }
         }
       }
+
+      .pointSection {
+        background-color: white;
+        margin-top: 0.83rem;
+        border-radius: 0;
+        padding: 1.67rem 1.33rem;
+
+        h3 {
+          font-size: 1.33rem;
+          font-family: Inter-SemiBold, Inter;
+          font-weight: 600;
+          color: #222222;
+          line-height: 1.17rem;
+          margin-bottom: 1.67rem;
+        }
+
+        .pointLabel {
+          font-size: 1.75rem;
+          font-family: Inter-SemiBold, Inter;
+          font-weight: 600;
+          color: #222222;
+          line-height: 1.67rem;
+        }
+        .exchangeBtn {
+          height: 2.67rem;
+          background: #8e50e4;
+          border-radius: 1.33rem;
+          filter: blur(0px);
+          display: inline-flex;
+          align-items: center;
+          justify-content: center;
+          font-size: 1.17rem;
+          font-family: Inter-SemiBold, Inter;
+          font-weight: 600;
+          color: #ffffff;
+          line-height: 1.17rem;
+          padding: 0 1.67rem;
+        }
+        .exchangeBtn_disable {
+          background-color: rgba(#222, 0.2);
+          cursor: not-allowed;
+        }
+
+        p {
+          margin-top: 1.17rem;
+          font-size: 1rem;
+          font-family: Inter-Medium, Inter;
+          font-weight: 500;
+          color: rgba(#222, 0.3);
+          line-height: 1rem;
+        }
+      }
+
       .balanceSection {
         margin-top: 0.83rem;
         border-radius: 0;
